Make the token pricing table user-editable (#85) (#234)
* Make the token pricing table user-editable (#85) (safety-net commit)

Task: 4e30ba64-8204-472c-9346-588f90673ea8
Agent-Run: 9ea37114-fd65-4a26-857e-37ef6597f373

* Make the token pricing table user-editable (#85) (safety-net commit)

Task: 4e30ba64-8204-472c-9346-588f90673ea8
Agent-Run: dc3d1334-bf47-44f2-ac5e-300b3c3e831a

---------
